2010-11-18  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [Gtk]  atk_text_get_selection returns the wrong offsets after a link
        https://bugs.webkit.org/show_bug.cgi?id=49514

        Consider possible embedded objects to calculate startOffset.

        So far we were using offsetInContainerNode() to calculate the
        value of startOffset when checking the offsets for the current
        selection, which was wrong because that wouldn't work ok if any
        embedded object was present in the paragraph before the
        selection. Thus, we need to consider this fact when calculating
        the startOffset from the point of view of the object this function
        is called on, in order to return the right and actual values.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (getSelectionOffsetsForObject): Check range length from the first
        position in the object the function is called on until the first
        position of current selection, and use it as startOffset.
2010-11-18  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [Gtk]  atk_text_get_selection returns the wrong offsets after a link
        https://bugs.webkit.org/show_bug.cgi?id=49514

        Updated test case to also chech this specific subcase.

        We need to explicitly check the case of having a selection in a
        paragraph after an embedded object (i.e. a link) to make sure the
        right calculations are being done when the paragraph is composed
        of more than just one text object, and the current selection is
        made only in one of them.

        * tests/testatk.c:
        (testWebkitAtkTextSelections): Make sure that a selection after a
        link in a paragraph is working ok when asking for the text
        selection from the point of view of the paragraph.

Canonical link: https://commits.webkit.org/62746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72284 268f45cc-cd09-0410-ab3c-d52691b4dbfc